[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "camera-sync",
    "spade==3.3.3",
]

[tool.uv.sources]
camera-sync = { git = "https://github.com/6figuress/CameraCalibration"}
